<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2025
  ~
  ~ This file is part of QUIK.
  ~
  ~ QUIK is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ QUIK is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with QUIK.  If not, see <http://www.gnu.org/licenses/>.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/select_all"
        android:icon="?attr/actionModeSelectAllDrawable"
        android:title="@string/main_menu_select_all"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/main_menu_delete"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_content_copy_black_24dp"
        android:title="@string/compose_menu_copy"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/send_now"
        android:icon="@drawable/ic_send_black_24dp"
        android:title="@string/scheduled_menu_send_now"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/edit_message"
        android:icon="@drawable/ic_schedule_send_black_24dp"
        android:title="@string/scheduled_menu_edit_message"
        android:visible="false"
        app:showAsAction="never" />

</menu>
