<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 Moez Bhatti <moez.bhatti@gmail.com>
  ~
  ~ This file is part of QKSMS.
  ~
  ~ QKSMS is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ QKSMS is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with QKSMS.  If not, see <http://www.gnu.org/licenses/>.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <dev.octoshrimpy.quik.common.widget.QkTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/message_content_filters_dialog_title"
        android:textColor="?android:attr/textColorPrimary"
        app:textSize="dialog" />

    <dev.octoshrimpy.quik.common.widget.QkEditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/message_content_filters_dialog_hint"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp"
        android:textColorHint="?android:attr/textColorTertiary"
        app:textSize="primary" />

    <dev.octoshrimpy.quik.common.widget.PreferenceView
        android:id="@+id/caseSensitivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/message_content_filters_dialog_case_switch"
        app:icon="@drawable/ic_format_size_black_24dp"
        app:widget="@layout/settings_switch_widget" />

    <dev.octoshrimpy.quik.common.widget.PreferenceView
        android:id="@+id/regexp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/message_content_filters_dialog_regex_switch"
        app:icon="@drawable/ic_settings_black_24dp"
        app:widget="@layout/settings_switch_widget" />

    <dev.octoshrimpy.quik.common.widget.PreferenceView
        android:id="@+id/contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/message_content_filters_dialog_contacts_switch"
        app:icon="@drawable/ic_person_black_24dp"
        app:widget="@layout/settings_switch_widget" />

</LinearLayout>
