<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Moez Bhatti <moez.bhatti@gmail.com>
  ~
  ~ This file is part of QKSMS.
  ~
  ~ QKSMS is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ QKSMS is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with QKSMS.  If not, see <http://www.gnu.org/licenses/>.
  -->
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_max="140dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <dev.octoshrimpy.quik.common.widget.QkTextView
                android:id="@+id/toolbarTitle"
                style="@style/ToolbarText"
                android:layout_height="wrap_content"
                android:textDirection="ltr"
                tools:text="Moez Bhatti" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/empty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp">

                    <dev.octoshrimpy.quik.common.widget.QkTextView
                        style="@style/TextPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/scheduled_empty_description"
                        android:textColor="?android:attr/textColorSecondary" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="56dp" />

                    <dev.octoshrimpy.quik.common.widget.TightTextView
                        style="@style/ScheduledSampleTextStyle"
                        android:layout_gravity="end"
                        android:text="@string/scheduled_empty_message_1" />

                    <dev.octoshrimpy.quik.common.widget.TightTextView
                        android:id="@+id/sampleMessage"
                        style="@style/ScheduledSampleTextStyle"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/rounded_rectangle_22dp"
                        android:text="@string/scheduled_empty_message_2"
                        tools:backgroundTint="@color/tools_theme"
                        tools:textColor="@color/textPrimaryDark" />

                    <dev.octoshrimpy.quik.common.widget.TightTextView
                        style="@style/ScheduledSampleTextStyle"
                        android:layout_gravity="end"
                        android:layout_marginTop="16dp"
                        android:text="@string/scheduled_empty_message_3" />

                    <dev.octoshrimpy.quik.common.widget.QkTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:gravity="end"
                        android:text="@string/scheduled_empty_message_3_timestamp"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textStyle="italic"
                        app:textSize="secondary" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="56dp" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/messages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/scheduled_message_list_item" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/compose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="@string/scheduled_compose_cd"
            android:src="@drawable/ic_schedule_send_black_24dp"
            android:tint="@color/white"
            android:visibility="visible"
            tools:backgroundTint="@color/tools_theme" />

        <LinearLayout
            android:id="@+id/upgrade"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_rectangle_24dp"
            android:elevation="4dp"
            android:gravity="center"
            android:visibility="gone"
            tools:backgroundTint="@color/tools_theme">

            <ImageView
                android:id="@+id/upgradeIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="12dp"
                android:src="@drawable/ic_star_black_24dp"
                tools:tint="@color/textPrimaryDark" />

            <dev.octoshrimpy.quik.common.widget.QkTextView
                android:id="@+id/upgradeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/title_qksms_plus"
                android:textColor="@color/textPrimaryDark"
                android:textStyle="bold"
                app:textSize="primary" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="?android:attr/divider" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>